Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(154cm, 75cm, -2044cm) rotate3d(-0.987, 0.134, 0.084, 1.130rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
-    <meta name="webspace.permissions.content_change_role" content="owner" />
   </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
@@ -71,20 +71,20 @@
     <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
     <!-- Code injected by live-server -->
     <script id="fwnp6y5" draggable="">
-      // &amp;amp;lt;![CDATA[  &amp;amp;lt;-- For SVG support
+      // &amp;amp;amp;lt;![CDATA[  &amp;amp;amp;lt;-- For SVG support
       if ('WebSocket' in window) {
         (function() {
           function refreshCSS() {
             var sheets = [].slice.call(document.getElementsByTagName("link"));
             var head = document.getElementsByTagName("head")[0];
-            for (var i = 0; i & amp; amp; lt; sheets.length; ++i) {
+            for (var i = 0; i & amp; amp; amp; lt; sheets.length; ++i) {
               var elem = sheets[i];
               var parent = elem.parentElement || head;
               parent.removeChild(elem);
               var rel = elem.rel;
-              if (elem.href & amp; amp; amp; & amp; amp; amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                var url = elem.href.replace(/(&amp;amp;amp;|\?)_cacheOverride=\d+/, '');
-                elem.href = url + (url.indexOf('?') & amp; amp; gt; = 0 ? '&amp;amp;amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
+              if (elem.href & amp; amp; amp; amp; & amp; amp; amp; amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                var url = elem.href.replace(/(&amp;amp;amp;amp;|\?)_cacheOverride=\d+/, '');
+                elem.href = url + (url.indexOf('?') & amp; amp; amp; gt; = 0 ? '&amp;amp;amp;amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
               }
               parent.appendChild(elem);
             }
@@ -96,7 +96,7 @@
             if (msg.data == 'reload') window.location.reload();
             else if (msg.data == 'refreshcss') refreshCSS();
           };
-          if (sessionStorage & amp; amp; amp; & amp; amp; amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+          if (sessionStorage & amp; amp; amp; amp; & amp; amp; amp; amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
             console.log('Live reload enabled.');
             sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
           }
@@ -104,7 +104,7 @@
       } else {
         console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
       }
-      // ]]&amp;amp;gt;
+      // ]]&amp;amp;amp;gt;
     </script>
     <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1050cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
