--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
     </label><a id="1x6nmgs" href="https://www.icicibank.com/customer-care" draggable="" style="transform: translate3d(-1049cm, 257cm, 2076cm) rotate3d(-0.004, 1.000, -0.000, 1.571rad) scale3d(1.32, 1.32, 1.32); "></a><label id="gm49gzv" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-842cm, 225cm, 2490cm) rotate3d(-0.017, 1.000, 0.020, 1.722rad); ">
-      <h1><br /></h1>
+      <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">ICICI Bank Customer Care</span></h1>
+      <p><br /></p>
+      <h2>Press 'O' over the icon next to this to visit the portal</h2>
     </label>
   </body>
 </html>
