Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -120,5 +120,8 @@
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
     </label>
+    <div id="s1trs2q" contenteditable="" draggable="" style="width: min-content; height: min-content; font-family: sans-serif; transform: translate3d(-615cm, 215cm, 2235cm) rotate3d(-0.982, 0.189, 0.008, 0.083rad); ">
+      <p>tel:+1-800-732-9194</p>
+    </div>
   </body>
 </html>
