Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
       <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">ICICI Bank Customer Care</span></h1>
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
+    </label><label id="zbnot4y" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-683cm, 222cm, 2197cm) rotate3d(-0.721, -0.692, -0.018, 0.073rad); ">
+      <h1><code style="color: rgb(0, 0, 0); background-color: initial;">&lt;</code><code style="color: rgb(0, 102, 153); background-color: initial;"><strong>a</strong></code><span style="color: rgb(55, 81, 116); background-color: rgba(32, 41, 47, 0.03);"> </span><code style="color: gray; background-color: initial;">href</code><code style="color: rgb(0, 0, 0); background-color: initial;">=</code><code style="color: blue; background-color: initial;">"tel:123-456-7890"</code><code style="color: rgb(0, 0, 0); background-color: initial;">&gt;123-456-7890&lt;/</code><code style="color: rgb(0, 102, 153); background-color: initial;"><strong>a</strong></code><code style="color: rgb(0, 0, 0); background-color: initial;">&gt;</code></h1>
     </label>
   </body>
 </html>
