Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
       <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">ICICI Bank Customer Care</span></h1>
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
-    </label><label id="zbnot4y" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-777cm, 250cm, 1978cm) scale3d(1.54, 1.54, 1.54); ">
+    </label><label id="zbnot4y" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-777cm, 250cm, 1978cm) scale3d(1.54, 1.54, 1.54); ">
       <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">Talk to a Bank of America Representative.</span></h1>
       <p><br /></p>
       <h1>Help is available 24/7. </h1>
-    </label><label id="iqvtzz7" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-477cm, 250cm, 1978cm) scale3d(2.10, 2.10, 2.10); ">
+    </label><label id="iqvtzz7" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-477cm, 250cm, 1978cm) scale3d(2.10, 2.10, 2.10); ">
       <h1><strong>Call: +1-800-732-9194 </strong></h1>
     </label>
   </body>
