Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
     </label><label id="iqvtzz7" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-477cm, 250cm, 1978cm) scale3d(2.10, 2.10, 2.10); ">
       <h1><strong>Call: +1-800-732-9194 </strong></h1>
     </label>
-    <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" draggable="" style="transform: translate3d(-400cm, 313cm, 375cm) rotate3d(0.000, 1.000, 0.000, 0.785rad); "></model>
+    <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(-350cm, 275cm, 438cm) rotate3d(-0.201, 0.976, 0.081, 0.783rad); "></model>
+    <model id="tp5sln6" type="model/vnd.svox" src="assets/stairs-793201.svox" draggable="" style="transform: translate3d(-671cm, 122cm, -93cm) rotate3d(-0.128, 0.990, 0.052, 0.780rad); "></model>
   </body>
 </html>
