--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
     </label><label id="iqvtzz7" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-477cm, 250cm, 1978cm) scale3d(2.10, 2.10, 2.10); ">
       <h1><strong>Call: +1-800-732-9194 </strong></h1>
     </label>
-    <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(-393cm, 304cm, 358cm) rotate3d(0.000, 1.000, 0.000, 0.785rad); "></model>
+    <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(162cm, 302cm, 95cm); "></model>
   </body>
 </html>
