Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -127,5 +127,6 @@
       <h1><strong>Call: +1-800-732-9194 </strong></h1>
     </label>
     <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(162cm, 302cm, 95cm); "></model>
+    <model id="hp4qtlh" type="model/vnd.svox" src="assets/consultroom-665535.svox" draggable="" style="transform: translate3d(92cm, 519cm, -272cm) rotate3d(0.996, 0.086, -0.008, 0.183rad); "></model>
   </body>
 </html>
