Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -128,5 +128,6 @@
     </label>
     <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(162cm, 302cm, 95cm); "></model>
     <model id="hp4qtlh" type="model/vnd.svox" src="assets/consultroom-665535.svox" style="transform: translate3d(150cm, 800cm, -1138cm); "></model>
+    <model id="g3roplp" type="model/vnd.svox" src="assets/wallback-436077.svox" draggable="" style="transform: translate3d(877cm, 647cm, -356cm) rotate3d(-0.003, 0.984, 0.179, 3.105rad); "></model>
   </body>
 </html>
