--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
     </label>
     <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(162cm, 302cm, 95cm); "></model>
     <model id="hp4qtlh" type="model/vnd.svox" src="assets/consultroom-665535.svox" style="transform: translate3d(150cm, 800cm, -1138cm); "></model>
-    <model id="g3roplp" type="model/vnd.svox" src="assets/wallback-436077.svox" draggable="" style="transform: translate3d(1050cm, 797cm, -150cm); "></model>
+    <model id="g3roplp" type="model/vnd.svox" src="assets/wallback-436077.svox" style="transform: translate3d(1050cm, 797cm, -150cm); "></model>
   </body>
 </html>
