Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <model id="2krcrxk" type="model/vnd.svox" src="assets/stairs-793201.svox" style="transform: translate3d(162cm, 302cm, 95cm); "></model>
     <model id="hp4qtlh" type="model/vnd.svox" src="assets/consultroom-665535.svox" style="transform: translate3d(150cm, 800cm, -1138cm); "></model>
     <model id="g3roplp" type="model/vnd.svox" src="assets/wallback-436077.svox" style="transform: translate3d(1050cm, 797cm, -150cm); "></model>
-    <model id="bd971rb" type="model/vnd.svox" src="assets/wallback-436077.svox" style="transform: translate3d(-713cm, 800cm, -150cm); "></model><label id="o4jf4oi" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(188cm, 1163cm, -275cm) scale3d(4.38, 4.38, 4.38); ">
+    <model id="bd971rb" type="model/vnd.svox" src="assets/wallback-436077.svox" style="transform: translate3d(-713cm, 800cm, -150cm); "></model><label id="o4jf4oi" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(175cm, 1113cm, -288cm) scale3d(4.38, 4.38, 4.38); ">
       <h1>Consulting Room</h1>
     </label>
   </body>
