Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(20cm, 75cm, -2066cm) rotate3d(-0.991, -0.122, -0.053, 0.825rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="0" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" loading="lazy" style="transform: translate3d(-754cm, 228cm, 2720cm) rotate3d(0.006, 0.998, 0.064, 3.320rad); " />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -71,20 +70,20 @@
     <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
     <!-- Code injected by live-server -->
     <script id="fwnp6y5" draggable="">
-      // &amp;amp;amp;amp;amp;lt;![CDATA[  &amp;amp;amp;amp;amp;lt;-- For SVG support
+      // &amp;amp;amp;amp;amp;amp;lt;![CDATA[  &amp;amp;amp;amp;amp;amp;lt;-- For SVG support
       if ('WebSocket' in window) {
         (function() {
           function refreshCSS() {
             var sheets = [].slice.call(document.getElementsByTagName("link"));
             var head = document.getElementsByTagName("head")[0];
-            for (var i = 0; i & amp; amp; amp; amp; amp; lt; sheets.length; ++i) {
+            for (var i = 0; i & amp; amp; amp; amp; amp; amp; lt; sheets.length; ++i) {
               var elem = sheets[i];
               var parent = elem.parentElement || head;
               parent.removeChild(elem);
               var rel = elem.rel;
-              if (elem.href & amp; amp; amp; amp; amp; amp; & amp; amp; amp; amp; amp; amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                var url = elem.href.replace(/(&amp;amp;amp;amp;amp;amp;|\?)_cacheOverride=\d+/, '');
-                elem.href = url + (url.indexOf('?') & amp; amp; amp; amp; amp; gt; = 0 ? '&amp;amp;amp;amp;amp;amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
+              if (elem.href & amp; amp; amp; amp; amp; amp; amp; & amp; amp; amp; amp; amp; amp; amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                var url = elem.href.replace(/(&amp;amp;amp;amp;amp;amp;amp;|\?)_cacheOverride=\d+/, '');
+                elem.href = url + (url.indexOf('?') & amp; amp; amp; amp; amp; amp; gt; = 0 ? '&amp;amp;amp;amp;amp;amp;amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
               }
               parent.appendChild(elem);
             }
@@ -96,7 +95,7 @@
             if (msg.data == 'reload') window.location.reload();
             else if (msg.data == 'refreshcss') refreshCSS();
           };
-          if (sessionStorage & amp; amp; amp; amp; amp; amp; & amp; amp; amp; amp; amp; amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+          if (sessionStorage & amp; amp; amp; amp; amp; amp; amp; & amp; amp; amp; amp; amp; amp; amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
             console.log('Live reload enabled.');
             sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
           }
@@ -104,7 +103,7 @@
       } else {
         console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
       }
-      // ]]&amp;amp;amp;amp;amp;gt;
+      // ]]&amp;amp;amp;amp;amp;amp;gt;
     </script>
     <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" style="transform: translate3d(-1050cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
@@ -113,15 +112,15 @@
     <img id="fgkuzey" loading="lazy" src="https://media.tenor.com/gthe_pgWPqAAAAAM/grubhub-ad.gif" style="transform: translate3d(-350cm, 263cm, -2561cm) rotate3d(0.010, 1.000, -0.001, 1.556rad) scale3d(4.99, 4.99, 4.99); " /><img id="vp7ckpw" loading="lazy" src="https://media.tenor.com/gthe_pgWPqAAAAAM/grubhub-ad.gif" style="transform: translate3d(575cm, 275cm, -2563cm) rotate3d(0.000, -1.000, 0.000, 1.571rad) scale3d(5.34, 5.34, 5.34); " />
     <img id="ls5h2zn" loading="lazy" src="https://media.tenor.com/6J3XOhGXP7oAAAAS/welcome.gif" style="transform: translate3d(150cm, 275cm, -1663cm) rotate3d(0.000, 1.000, -0.014, 3.126rad) scale3d(5.67, 5.67, 5.67); " />
     <a id="ydku80x" href="https://www.pgportal.gov.in/Home/LodgeGrievance" style="transform: translate3d(-956cm, 250cm, 2903cm) rotate3d(0.000, 1.000, 0.000, 3.142rad) scale3d(1.32, 1.32, 1.32); "></a><label id="m86o1h4" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-643cm, 250cm, 2902cm) rotate3d(0.000, 1.000, 0.000, 3.142rad) scale3d(1.54, 1.54, 1.54); ">
-      <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">Centralised Public </span><span style="color: rgb(118, 118, 118); background-color: rgb(255, 255, 255);">Grievance</span><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);"> Redress and Monitoring System</span></h1>
+      <h1><span style="background-color: rgb(255, 255, 255); color: rgb(113, 119, 125);">Centralised Public </span><span style="background-color: rgb(255, 255, 255); color: rgb(118, 118, 118);">Grievance</span><span style="background-color: rgb(255, 255, 255); color: rgb(113, 119, 125);"> Redress and Monitoring System</span></h1>
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
     </label><a id="1x6nmgs" href="https://www.icicibank.com/customer-care" style="transform: translate3d(-1049cm, 257cm, 2113cm) rotate3d(-0.006, 1.000, -0.002, 1.571rad) scale3d(1.32, 1.32, 1.32); "></a><label id="gm49gzv" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-1048cm, 257cm, 2513cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(2.50, 2.50, 2.50); ">
-      <h1><span style="background-color: rgb(255, 255, 255); color: rgb(113, 119, 125);">ICICI Bank Customer Care</span></h1>
+      <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">ICICI Bank Customer Care</span></h1>
       <p><br /></p>
       <p>Press 'O' over the icon next to this to visit the portal</p>
     </label><label id="zbnot4y" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-777cm, 250cm, 1978cm) scale3d(1.54, 1.54, 1.54); ">
-      <h1><span style="background-color: rgb(255, 255, 255); color: rgb(113, 119, 125);">Talk to a Bank of America Representative.</span></h1>
+      <h1><span style="color: rgb(113, 119, 125); background-color: rgb(255, 255, 255);">Talk to a Bank of America Representative.</span></h1>
       <p><br /></p>
       <h1>Help is available 24/7.</h1>
     </label><label id="iqvtzz7" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-477cm, 250cm, 1978cm) scale3d(2.10, 2.10, 2.10); ">
