Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
     </label>
     <label id="t0mszp8" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-534cm, 310cm, 928cm) rotate3d(0.025, 1.000, 0.008, 1.571rad); ">
       <h1>Scheme 1 banners and personnel</h1>
+    </label><label id="4cd9l5a" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(418cm, 288cm, 922cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); ">
+      <h1>Scheme 2 banners and personnel</h1>
     </label>
   </body>
 </html>
